--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ header p {
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
+    cursor: pointer; /* Umożliwia kliknięcie */
     pointer-events: auto; /* Przywraca możliwość interakcji */
 }
 
@@ -189,6 +190,7 @@ nav ul li a:hover::after {
     justify-content: space-around;
     width: 30px;
     height: 24px;
+    cursor: pointer;
 }
 
 .nav-toggle span {
